--- a/index.HTML.html
+++ b/index.HTML.html
@@ -1,9 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport"
+	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet"
+	      href="style.css">
+	<script src="https://kit.fontawesome.com/9daa83406b.js" crossorigin="anonymous"></script>
 	<title>Meal Finder</title>
 </head>
 <body>
+<div class="container">
+	<h1>Meal Finder</h1>
+	<div class="flex">
+		<form class="flex" id="submit">
+			<input type="text" id="search"
+			       placeholder="Search for meals or keywords">
+			<button class="search-btn" type="submit">
+				<i class="fas fa-search"></i>
+			</button>
+		</form>
+		<button class="random-btn" id="random">
+			<i class="fa fa-random"></i>
+		</button>
+	</div>
+	<div id="result-heading"></div>
+	<div id="meals" class="meals"></div>
+	<div id="single-meal"></div>
+</div>
+
+<script src="index.js"></script>
 </body>
 </html>
